@startuml
class com.example.smash_card.InfoGame {
- String mode
- int score
- int numberQuestion
+ {static} Creator<InfoGame> CREATOR
+ String getMode()
+ int getScore()
+ int getNumberQuestion()
+ void setMode(String)
+ void setScore(int)
+ void setNumberQuestion(int)
+ void increaseScore()
+ void increaseNumberQuestion()
+ int describeContents()
+ void writeToParcel(Parcel,int)
}
class com.example.smash_card.activities.AboutActivity {
# void onCreate(Bundle)
}
class com.example.smash_card.activities.CharacterListActivity {
+ {static} String TAG
- List<SmashCharacter> characters
- CharacterAdapter adapter
# void onCreate(Bundle)
}
class com.example.smash_card.activities.StatsEndQuizActivity {
# void onCreate(Bundle)
+ void onClick(View)
+ void onBackPressed()
}
class com.example.smash_card.CharacterAdapter {
- List<SmashCharacter> characters
+ ViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(CharacterAdapter.ViewHolder,int)
+ int getItemCount()
+ void onClick(View)
}
class com.example.smash_card.CharacterAdapter.ViewHolder {
~ ImageView image
~ TextView charName
}
class com.example.smash_card.activities.GameActivity {
- SmashCharacter goodAnswer
- RadioGroup radioGroup
- Button confirmButton
- List<SmashCharacter> characters
- List<SmashCharacter> charactersAnswers
- InfoGame infoGame
# void onCreate(Bundle)
+ void onClick(View)
- void handleConfirm(Context)
- void getValueIntent()
+ void onBackPressed()
+ void onCheckedChanged(RadioGroup,int)
- void alertWrongAnswer(Context)
}
class com.example.smash_card.Question {
- List<SmashCharacter> charactersList
+ List<SmashCharacter> getRandomCharacter()
}
class com.example.smash_card.SmashCharacter {
- String image
- String name
- String fileName
+ {static} Parcelable.Creator<SmashCharacter> CREATOR
+ String getImage()
+ String getName()
+ String getFileName()
+ void writeToParcel(Parcel,int)
+ int describeContents()
}
class com.example.smash_card.activities.HomeActivity {
- {static} String TAG
- List<SmashCharacter> characters
# void onCreate(Bundle)
- void loadDataFromApi(Button,Button)
+ void onClick(View)
- void dialogGameMode(Context)
+ void onBackPressed()
}
class com.example.smash_card.activities.FullScreenImageActivity {
# void onCreate(Bundle)
}
class com.example.smash_card.Utils {
+ {static} void playWavSound(AssetFileDescriptor)
+ {static} int getRandomNumberInRange(int,int)
}
class com.example.smash_card.activities.FlashCardActivity {
- SmashCharacter character
# void onCreate(Bundle)
+ void onClick(View)
}


android.os.Parcelable <|.. com.example.smash_card.InfoGame
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.AboutActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.CharacterListActivity
com.example.smash_card.activities.OnClickListener <|.. com.example.smash_card.activities.StatsEndQuizActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.StatsEndQuizActivity
com.example.smash_card.OnClickListener <|.. com.example.smash_card.CharacterAdapter
com.example.smash_card.Adapter <|-- com.example.smash_card.CharacterAdapter
com.example.smash_card.CharacterAdapter +.. com.example.smash_card.CharacterAdapter.ViewHolder
com.example.smash_card.ViewHolder <|-- com.example.smash_card.CharacterAdapter.ViewHolder
com.example.smash_card.activities.OnClickListener <|.. com.example.smash_card.activities.GameActivity
com.example.smash_card.activities.OnCheckedChangeListener <|.. com.example.smash_card.activities.GameActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.GameActivity
android.os.Parcelable <|.. com.example.smash_card.SmashCharacter
com.example.smash_card.activities.OnClickListener <|.. com.example.smash_card.activities.HomeActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.HomeActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.FullScreenImageActivity
com.example.smash_card.activities.OnClickListener <|.. com.example.smash_card.activities.FlashCardActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.smash_card.activities.FlashCardActivity
@enduml